home fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -193,11 +193,12 @@ li a:hover{
 	text-underline-offset: .6rem;
 }
 .bg{z-index: 0;
-box-sizing: border-box;
+box-sizing: border-box; 
 position: absolute;
 background-repeat: no-repeat;
 width: 100%;
 min-height: 1080px;
+overflow-X:hidden;
 background: linear-gradient(180deg, rgba(0,6,84,1) 0%, rgba(186,0,174,1) 60%);}
 
 .clouds{
